[package]
name = "grin_servers"
version = "2.0.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-rustls = "0.14"
failure = "0.1"
failure_derive = "0.1"
fs2 = "0.4"
futures = "0.1"
http = "0.1"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"
bufstream = "~0.1"
jsonrpc-core = "~8.0"
url = "1.7.0"
digest = "0.7"

grin_api = { path = "../api", version = "2.0.0" }
grin_chain = { path = "../chain", version = "2.0.0" }
grin_core = { path = "../core", version = "2.0.0" }
grin_keychain = { path = "../keychain", version = "2.0.0" }
grin_p2p = { path = "../p2p", version = "2.0.0" }
grin_pool = { path = "../pool", version = "2.0.0" }
grin_store = { path = "../store", version = "2.0.0" }
grin_util = { path = "../util", version = "2.0.0" }
